--- a/MAY-2017-NYC/lesson1/index.html
+++ b/MAY-2017-NYC/lesson1/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 
+	<!-- Reset first -->
 	<link rel="stylesheet" href="css/reset.css">
+	<!-- Any libraries/frameworks -->
+	<link rel="stylesheet" href="css/grid12.css">
+	<!-- Your code -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="container">
 	<nav>
 		<ul>
 			<!-- (li>a)*4 -->
@@ -17,13 +22,27 @@
 			<li><a href="#projects">Projects</a></li>
 		</ul>
 	</nav>
+	<button id="menu-button">☰</button>
 
 	<section id="home">
 		<h1>Home</h1>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis <span class="bigger">magnam</span> dolorem exercitationem, suscipit hic ad, incidunt aliquam! In ea quisquam laudantium debitis impedit molestias. Nulla consequuntur unde quod, voluptate aliquam!
 	</section>
+	
 	<section id="about">
-		<h1>About</h1>
+		<div class="row">
+			<div class="col-xs-12"></div>
+		</div>
+		<div class="row">
+			<div class="col-xs-6"></div>
+			<div class="col-xs-6"></div>
+		</div>
+		<div class="row">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4"></div>
+		</div>
+
 	</section>
 	<section id="resume">
 		<h1>Resume</h1>
