--- a/MAY-2017-NYC/lesson1/index.html
+++ b/MAY-2017-NYC/lesson1/index.html
@@ -34,22 +34,66 @@
 			<div class="col-xs-12"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6"></div>
-			<div class="col-xs-6"></div>
+			<div class="col-sm-9 col-md-6"></div>
+			<div class="col-sm-3 col-md-6"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-4"></div>
-			<div class="col-xs-4"></div>
-			<div class="col-xs-4"></div>
+			<div class="col-sm-6 col-md-4"></div>
+			<div class="col-sm-6 col-md-4"></div>
+			<div class="col-sm-12 col-md-4"></div>
 		</div>
 
 	</section>
 	<section id="resume">
-		<h1>Resume</h1>
+		<h1>Image Gallery</h1>
+
+		<div class="row">
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3">
+				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+			</div>
+		</div>
+
 	</section>
 	<section id="projects">
 		<h1>Projects</h1>
 	</section>
+
+	<footer>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo inventore architecto quibusdam temporibus quam, facere est, nesciunt quod veritatis ab libero, optio facilis nulla consequuntur ipsum ipsa. Amet repellat, assumenda.
+	</footer>
 
 	<!-- <ul>
 		<li>a</li>
