--- a/MAY-2017-NYC/lesson1/index.html
+++ b/MAY-2017-NYC/lesson1/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<!-- Any libraries/frameworks -->
 	<link rel="stylesheet" href="css/grid12.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+
 	<!-- Your code -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -49,46 +51,34 @@
 
 		<div class="row">
 			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+				<a data-fancybox="gallery" href="img/puppy.jpg"><img class="img-responsive" src="img/puppy.jpg"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+				<a data-fancybox="gallery" href="img/puppy.jpg"><img class="img-responsive" src="img/puppy.jpg"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+				<a data-fancybox="gallery" href="img/puppy.jpg"><img class="img-responsive" src="img/puppy.jpg"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+				<a data-fancybox="gallery" href="img/puppy.jpg"><img class="img-responsive" src="img/puppy.jpg"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+				<a data-fancybox="gallery" href="img/puppy.jpg"><img class="img-responsive" src="img/puppy.jpg"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
-			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
-			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
-			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
-			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
-			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
-			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3">
-				<img class="img-responsive" src="http://lorempixel.com/400/300/abstract/" alt="">
+				<a data-fancybox="gallery" href="img/puppy.jpg"><img class="img-responsive" src="img/puppy.jpg"></a>
 			</div>
 		</div>
 
 	</section>
 	<section id="projects">
 		<h1>Projects</h1>
+
+
+
+		
+		
+
 	</section>
 
 	<footer>
@@ -115,6 +105,8 @@
 
   <!-- Any libraries or plugins -->
   <script src="js/jquery.nav.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
+
 
   <!-- Your code -->
   <script src="js/main.js"></script>
