--- a/NOV-2017-NYC/lesson14/index.html
+++ b/NOV-2017-NYC/lesson14/index.html
@@ -43,7 +43,8 @@
             <button class="next">Next Question</button>
         </div>
 
-        <div class="sprite sprite-github"></div>
+        <!-- Sprite Example (unrelated to trivia game) -->
+        <!-- <div class="sprite sprite-github"></div> -->
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
